tests/ui/const-generics/min_const_generics/macro-fail.stderr
error: expected type, found `{`
  --> $DIR/macro-fail.rs:28:27
   |
LL |   fn make_marker() -> impl Marker<gimme_a_const!(marker)> {
   |                                   ----------------------
   |                                   |
   |                                   this macro call doesn't expand to a type
   |                                   in this macro invocation
...
LL | /     macro_rules! gimme_a_const {
LL | |       ($rusty: ident) => {{ let $rusty = 3; *&$rusty }}
   | |                           ^ expected type
LL | |
LL | |
LL | |     };
   | |_____- in this expansion of `gimme_a_const!`

error: expected type, found `{`
  --> $DIR/macro-fail.rs:28:27
   |
LL |     Example::<gimme_a_const!(marker)>
   |               ----------------------
   |               |
   |               this macro call doesn't expand to a type
   |               in this macro invocation
...
LL | /     macro_rules! gimme_a_const {
LL | |       ($rusty: ident) => {{ let $rusty = 3; *&$rusty }}
   | |                           ^ expected type
LL | |
LL | |
LL | |     };
   | |_____- in this expansion of `gimme_a_const!`

error: expected type, found `{`
  --> $DIR/macro-fail.rs:4:10
   |
LL | / macro_rules! external_macro {
LL | |   () => {{
   | |          ^ expected type
LL | |
LL | |     const X: usize = 1337;
LL | |     X
LL | |   }}
LL | | }
   | |_- in this expansion of `external_macro!`
...
LL |     let _fail = Example::<external_macro!()>;
   |                           -----------------
   |                           |
   |                           this macro call doesn't expand to a type
   |                           in this macro invocation

error: unexpected end of macro invocation
  --> $DIR/macro-fail.rs:37:25
   |
LL |     macro_rules! gimme_a_const {
   |     -------------------------- when calling this macro
...
LL |   let _fail = Example::<gimme_a_const!()>;
   |                         ^^^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$rusty:ident`
  --> $DIR/macro-fail.rs:28:8
   |
LL |       ($rusty: ident) => {{ let $rusty = 3; *&$rusty }}
   |        ^^^^^^^^^^^^^

error[E0747]: type provided when a constant was expected
  --> $DIR/macro-fail.rs:14:33
   |
LL | fn make_marker() -> impl Marker<gimme_a_const!(marker)> {
   |                                 ^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0747`.
